crates/reflect-tui/src/tui_core/keymap_setup/snapshots/reflect_tui__tui_core__keymap_setup__tests__keymap_debug_view_match.snap
---
source: crates/reflect-tui/src/tui_core/keymap_setup/tests.rs
expression: rendered
---
Keypress Inspector
Press any key to see what Reflect receives. Esc is inspected; Ctrl+C closes.
Tip: Reflect can only inspect keys your terminal sends.

Detected: ctrl + o
Config key: ctrl-o
Raw event: code=Char('o'), modifiers=ctrl, kind=Press

Assigned actions:
  - global.copy (Copy) - Copy the last agent response to the clipboard. [Default]
