crates/reflect-tui/src/tui_core/keymap_setup/snapshots/reflect_tui__tui_core__keymap_setup__tests__keymap_picker_fast_mode_enabled.snap
---
source: crates/reflect-tui/src/tui_core/keymap_setup/mod.rs
expression: "render_picker(params, 120)"
---

  Keymap
  All configurable shortcuts.
  109 actions, 0 customized, 3 unbound.

  [All]  Common  Customized (0)  Unbound (3)  App  Composer  Editor  Vim  Navigation  Approval  Debug

  Type to search shortcuts
› Global         Open Transcript            ctrl-t
  Global         Open External Editor       ctrl-g
  Global         Copy                       ctrl-o
  Global         Clear Terminal             ctrl-l
  Global       - Toggle Vim Mode            unbound
  Global       - Toggle Fast Mode           unbound
  Global         Toggle Raw Output          alt-r
  Chat           Interrupt Turn             esc

  left/right group · enter edit shortcut · * custom · - unbound · esc close
